force-app/main/default/objects/Lead/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>Porte da empresa do lead.</description>
    <label>Porte da Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MEI</fullName>
            </value>
            <value>
                <fullName>Micro</fullName>
            </value>
            <value>
                <fullName>Pequena</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Grande</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>