force-app/main/default/objects/Lead/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <description>Motivo da desqualificacao do lead. Obrigatorio quando Status = Desqualificado (via Validation Rule).</description>
    <label>Motivo de Desqualificacao</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem orcamento</fullName>
            </value>
            <value>
                <fullName>Sem necessidade</fullName>
            </value>
            <value>
                <fullName>Concorrente escolhido</fullName>
            </value>
            <value>
                <fullName>Fora do perfil</fullName>
            </value>
            <value>
                <fullName>Nao responde</fullName>
            </value>
            <value>
                <fullName>Dados invalidos</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>