force-app/main/default/objects/Lead/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <description>Evento onde o lead foi captado</description>
    <label>Evento que participou</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12º Fórum Nacional 2024</fullName>
            </value>
            <value>
                <fullName>ABRAS&apos;26</fullName>
            </value>
            <value>
                <fullName>ABRAS 2022</fullName>
            </value>
            <value>
                <fullName>ABRAS 2024</fullName>
            </value>
            <value>
                <fullName>ABRAS ACAPS 2025</fullName>
            </value>
            <value>
                <fullName>ABRAS ACESU 2025</fullName>
            </value>
            <value>
                <fullName>ABRAS AGAS 2025</fullName>
            </value>
            <value>
                <fullName>ABRAS AMAS 2025</fullName>
            </value>
            <value>
                <fullName>ABRAS AMASE 2025</fullName>
            </value>
            <value>
                <fullName>ABRAS AMIS 2025</fullName>
            </value>
            <value>
                <fullName>ABRAS APES 2025</fullName>
            </value>
            <value>
                <fullName>ABRAS APRAS 2025</fullName>
            </value>
            <value>
                <fullName>ABRAS ASPB 2025</fullName>
            </value>
            <value>
                <fullName>ABRAS ASSURN 2025</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (ACAPS)</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (ACESU)</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (AMIS)</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (ASSURN)</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação AGAS</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação APRAS</fullName>
            </value>
            <value>
                <fullName>Abras em Ação Estaduais Ceará 2024</fullName>
            </value>
            <value>
                <fullName>Abras em Ação Mato Grosso do Sul 2024</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação Paraíba 2024</fullName>
            </value>
            <value>
                <fullName>Abras em Ação Paraná 2024</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação Pernambuco 2024</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação Santa Catarina 2024</fullName>
            </value>
            <value>
                <fullName>ABRAS’26 (Cota Diamante)</fullName>
            </value>
            <value>
                <fullName>ACAPS</fullName>
            </value>
            <value>
                <fullName>APAS Experience Bauru 2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>