force-app/main/default/objects/Lead/fields/Funcionarios__c.field-meta.xml
<CustomField>
    <fullName>Funcionarios__c</fullName>
    <label>Número de Funcionários</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-10</fullName>
            </value>
            <value>
                <fullName>11-50</fullName>
            </value>
            <value>
                <fullName>51-200</fullName>
            </value>
            <value>
                <fullName>201-500</fullName>
            </value>
            <value>
                <fullName>501-100</fullName>
            </value>
            <value>
                <fullName>1001-5000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>