force-app/main/default/objects/Lead/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <description>Data do ultimo contato com o lead. Preenchido manualmente pelo SDR.</description>
    <label>Data do Ultimo Contato</label>
    <type>Date</type>
</CustomField>