force-app/main/default/objects/Lead/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <description>Complemento da origem do lead. Ex: nome do evento, campanha especifica, pagina de captura.</description>
    <inlineHelpText>Detalhe a origem do lead (ex: SAP Summit 2026, Campanha Black Friday).</inlineHelpText>
    <label>Origem Detalhada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>