force-app/main/default/objects/Lead/fields/ListaInscrito__c.field-meta.xml
<CustomField>
    <fullName>ListaInscrito__c</fullName>
    <label>Lista em que está inscrito</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Book Prevenção de Perdas em Supermercados 2018</fullName>
            </value>
            <value>
                <fullName>Tendências Tecnológicas 2020</fullName>
            </value>
            <value>
                <fullName>Infográfico - Calendário do Varejo - 2021</fullName>
            </value>
            <value>
                <fullName>Info - Benefícios B.I. E-Commerce - 2020</fullName>
            </value>
            <value>
                <fullName>Info - Checklist de Prevenção de Perdas - 2020</fullName>
            </value>
            <value>
                <fullName>Info - KPIs Essenciais Compras - 2020</fullName>
            </value>
            <value>
                <fullName>Infográfico - Calendário do Varejo - 2020</fullName>
            </value>
            <value>
                <fullName>Infográfico - 10 Dicas para preparar-se para as Sazonalidades</fullName>
            </value>
            <value>
                <fullName>Info - 11 Erros Comuns Gestão Financeira - 2019</fullName>
            </value>
            <value>
                <fullName>E-Book Tendências Tecnológicas 2021</fullName>
            </value>
            <value>
                <fullName>E-Book - PIX nos Supermercados</fullName>
            </value>
            <value>
                <fullName>E-Book - Prevenção de Perdas nos Supermercados - 2020</fullName>
            </value>
            <value>
                <fullName>E-Book - LGPD - Fique em Conformidade com a Lei</fullName>
            </value>
            <value>
                <fullName>E-Book - CoMKT - Bluesoft e iMendes</fullName>
            </value>
            <value>
                <fullName>E-Book - CoMKT - Bluesoft e Acelerato</fullName>
            </value>
            <value>
                <fullName>E-Book - ERP na Nuvem e o Home Office nos Supermercados</fullName>
            </value>
            <value>
                <fullName>Boas práticas no combate ao COVID para Supermercados</fullName>
            </value>
            <value>
                <fullName>Prevenção de Perdas nos Supermercados - 2019</fullName>
            </value>
            <value>
                <fullName>E-commerce para Supermercadistas</fullName>
            </value>
            <value>
                <fullName>ERP para Supermercados - 2019</fullName>
            </value>
            <value>
                <fullName>E-Book - NRF 2019 para Supermercadistas</fullName>
            </value>
            <value>
                <fullName>E-Book - Tendencias Tecnologicas 2019</fullName>
            </value>
            <value>
                <fullName>E-Book - Tendências Tecnológicas para o Varejo em 2018</fullName>
            </value>
            <value>
                <fullName>E-Book - Tendencias Tecnologicas 2017</fullName>
            </value>
            <value>
                <fullName>E-Book - Atendimento ao cliente no Varejo - 2017</fullName>
            </value>
            <value>
                <fullName>[BS] Contatos do Site Bluesoft</fullName>
            </value>
            <value>
                <fullName>Ebook Guia de Planejamento Tributário</fullName>
            </value>
            <value>
                <fullName>Ebook ICMS Substituição Tributária (ICMS ST) e CEST</fullName>
            </value>
            <value>
                <fullName>Ebook - Direito Tributário</fullName>
            </value>
            <value>
                <fullName>EBook 12 práticas para uma Boa Gestão de Varejo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>