force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <description>Produto ou software especifico de interesse do lead.</description>
    <label>Produto de Interesse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP Business One</fullName>
            </value>
            <value>
                <fullName>TOTVS Protheus</fullName>
            </value>
            <value>
                <fullName>Acelerato Help Desk</fullName>
            </value>
            <value>
                <fullName>Acelerato Service Desk</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>