force-app/main/default/objects/Lead/fields/Qualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Notes__c</fullName>
    <description>Observacoes e notas do SDR sobre a qualificacao do lead.</description>
    <label>Observacoes da Qualificacao</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>