force-app/main/default/objects/Lead/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Segmento de atuacao especifico para classificacao Bluesoft.</description>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tecnologia</fullName>
            </value>
            <value>
                <fullName>Industria</fullName>
            </value>
            <value>
                <fullName>Saude</fullName>
            </value>
            <value>
                <fullName>Servicos</fullName>
            </value>
            <value>
                <fullName>Varejo</fullName>
            </value>
            <value>
                <fullName>Educacao</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Agronegocio</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>