force-app/main/default/objects/Lead/fields/TotalPDVs__c.field-meta.xml
<CustomField>
    <fullName>TotalPDVs__c</fullName>
    <description>Quantidade total de PDVs da rede</description>
    <label>Quantidade Total de PDVs da Rede</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>