force-app/main/default/objects/Lead/fields/UnidadesLojas__c.field-meta.xml
<CustomField>
    <fullName>UnidadesLojas__c</fullName>
    <description>Quantidade de unidades ou lojas da rede</description>
    <label>Quantas Unidades / Lojas</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>